Added animation speed and updated style

--- a/style.css
+++ b/style.css
@@ -7,13 +7,168 @@ body {
   position: absolute;
 }
 
-button{
-  margin: 20px;
+#titleImage {
+  /* position: absolute; */
+  /* right: 0; */
+  width: 50%;
+}
+
+.imageContainer {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#leftPanel {
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height:100%;
+  width:25%
+}
+
+#rightPanel {
+  position: absolute;
+  display: flex;
+  right: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:100%;
+  width:25%;
+  padding-right:10px;
+  padding-left:10px;
 }
 
 .buttonContainer {
   position: absolute;
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
+  width: 80%;
+  height: 70%;
+  justify-content: space-evenly;
+}
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+button {
+  font-family: 'Roboto Slab', serif;
+  border: solid 2px black;
+  background-color: white;
+  border-radius: 0.35rem;
+  cursor: pointer;
+  width: 80%;
+  height: 80%;
+  font-size: auto;
+  max-height: 40px;
+}
+
+button:hover {
+  background-color: rgb(113, 113, 255);
+  border-radius: 0.35rem;
+  border: solid 2px black;
+  transition: all 0.3s ease-in-out;
+}
+
+
+.description {
+  font-family: 'Roboto Slab', serif;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: auto;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column; 
+  justify-content: center;
+}
+
+.form-group label {
+  text-transform: uppercase;
+  font-size: .7rem;
+  color: #222;
+  margin-bottom: 5px;
+}
+
+.form-group span {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #3c3b3b;
+}
+
+.range__slider [type="range"] {
+  width: 100%;
+  -webkit-appearance: none;
+  height: 13px;
+  border-radius: 6px;
+  background: #f1f1f1;
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
+
+.range__slider label {
+  margin-bottom: 10px;
+}
+
+
+/* custom thumb */
+.range__slider [type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #7a00ff;
+  border: #f9ca24 5px solid;
+  cursor: pointer;
+  -webkit-transition: background .15s ease-in-out;
+  transition: background .15s ease-in-out;
+}
+
+.range__slider [type="range"]::-webkit-slider-thumb:hover {
+  background: #f0932b;
+}
+
+.range__slider [type="range"]::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border: 0;
+  border-radius: 50%;
+  background: #f0932b;
+  border: #f9ca24 5px solid; cursor: pointer;
+  -webkit-transition: background .15s ease-in-out;
+  transition: background .15s ease-in-out;
+}
+
+.range__slider [type="range"]::-moz-range-thumb:hover {
+  background: #f9ca24;
+}
+
+/* remove border */
+input::-moz-focus-inner, input::-moz-focus-outer {
+  border: 0;
+}
+
+.textPanel {
+  font-family: 'Roboto Slab', serif;
+  border: solid 2px black;
+  background-color: white;
+  border-radius: 0.35rem;
+  width: 80%;
+  height: 20%;
+  font-size: auto;
+  margin: auto;
+  display: flex;
+  align-items: center;
 }
